FIXED: overlapping zoom control

--- a/client/src/components/game/gui/panels/map/MapPanel.scss
+++ b/client/src/components/game/gui/panels/map/MapPanel.scss
@@ -24,4 +24,8 @@
             display: none;
         }
     }
+
+    .leaflet-control-zoom {
+        margin-top: 2rem;
+    }
 }
